Added uncheck function

--- a/src/app/filter-select/filter-select.component.html
+++ b/src/app/filter-select/filter-select.component.html
@@ -2,11 +2,9 @@
   <h4>Selected Cities:</h4>
   <mat-card id="chips">
   <mat-chip-list #chipList aria-label="Fruit selection">
-    <mat-chip *ngFor="let city of selectedCities" [selectable]="selectable"
-             [removable]="removable" (removed)="remove(city)">
-      <span class="top-chip">{{city?.name}}<br><span class="little">({{city?.subcountry}} - {{city?.country}})</span></span>
-      
-      <mat-icon matChipRemove>cancel</mat-icon>
+    <mat-chip *ngFor="let city of selectedCities">
+      <span class="top-chip">{{city?.name}}<br><span class="little">({{city?.subcountry}} - {{city?.country}})</span></span>      
+      <mat-icon (click)="remove(city)" matChipRemove>cancel</mat-icon>
     </mat-chip>
   </mat-chip-list>
 </mat-card>
@@ -20,10 +18,14 @@
 
   </mat-form-field>
   <mat-card class="float-left w-100">
-    <mat-checkbox class="w-100 float-left" (click)="checkCity(filteredCity)" *ngFor="let filteredCity of filteredCities">
-      <span class="top">{{filteredCity?.name}}</span>
-      <span class="bottom">{{filteredCity?.subcountry}} - {{filteredCity?.country}}</span>
-    </mat-checkbox>
+    <ng-container *ngFor="let filteredCity of filteredCities">
+      <div class="w-100 float-left mb-2">
+        <mat-checkbox (click)="checkCity($event, filteredCity)" checked="{{filteredList[filteredCity?.geonameid]}}">
+          <span class="top">{{filteredCity?.name}}</span>
+          <span class="bottom">{{filteredCity?.subcountry}} - {{filteredCity?.country}}</span>
+        </mat-checkbox>
+      </div>
+  </ng-container>
    </mat-card>
 
 </form>
