--- a/src/app/filter-select/filter-select.component.scss
+++ b/src/app/filter-select/filter-select.component.scss
@@ -18,9 +18,11 @@ mat-card#chips{height:80px; overflow-y:scroll}
 .little{
   font-size: 9px;
 }
-mat-checkbox{
-  margin-bottom: 10px;
-}
+
 ::ng-deep .mat-standard-chip.mat-chip-with-trailing-icon{
 padding-right: 4px!important;
 padding-left: 6px!important;}
+
+::ng-deep  .mat-checkbox-layout{
+  margin:0!important;
+}
